[feat] updates some

--- a/_includes/css/just-the-docs.scss.liquid
+++ b/_includes/css/just-the-docs.scss.liquid
@@ -1,5 +1,5 @@
 {% if site.logo %}
-$logo: "{{ site.logo | relative_url }}";
+$logo: "{{ site.logo | /box.png }}";
 {% endif %}
 @import "./support/support";
 @import "./custom/setup";
